--- a/Main/src/chatbotstyle.css
+++ b/Main/src/chatbotstyle.css
@@ -5,32 +5,6 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 }
-html,body{
-    /* display: grid; */
-    height: 100%;
-    /* place-items: center; */
-    
-}
-
-::selection{
-    color: #fff;
-    background: #3D56B2;
-}
-
-::-webkit-scrollbar{
-    width: 3px;
-    border-radius: 25px;
-}
-::-webkit-scrollbar-track{
-    background: #f1f1f1;
-}
-::-webkit-scrollbar-thumb{
-    background: #ddd;
-}
-::-webkit-scrollbar-thumb:hover{
-    background: #ccc;
-}
-
 .wrapper{
     width: 360px;
     background: #fff;
@@ -179,41 +153,6 @@ html,body{
     cursor: pointer;
 }
 
-
-
-/* Hero Banner */
-.hero-banner h1 {
-    font-size: 48px;
-}
-.hero-banner .btn {
-    position: relative;
-    overflow: hidden;
-    z-index: 9;
-}
-.hero-banner .btn-primary {
-    color: #2f2f41;
-    background-color: #5C7AEA;
-    border-color: #5C7AEA;
-}
-.hero-banner .btn:before {
-    content: "";
-    background: #3D56B2;
-    width: 4px;
-    height: 100%;
-    position: absolute;
-    left: 0;
-    top: 0;
-    z-index: -1;
-    -webkit-transition: all 0.5s ease-in-out 0s;
-    -moz-transition: all 0.5s ease-in-out 0s;
-    -ms-transition: all 0.5s ease-in-out 0s;
-    -o-transition: all 0.5s ease-in-out 0s;
-    transition: all 0.5s ease-in-out 0s;
-}
-.hero-banner .btn:hover:before {
-    width: 100%;
-}
-
 #btn_close {
 
     position: absolute;
@@ -230,4 +169,65 @@ html,body{
 #btn_close:hover{
     background-color:#5C7AEA;
     color:black;
+}
+
+/* Chatmessage loading animation */
+.loader,
+.loader:before,
+.loader:after {
+  border-radius: 50%;
+  width: 2.5em;
+  height: 2.5em;
+  -webkit-animation-fill-mode: both;
+  animation-fill-mode: both;
+  -webkit-animation: load7 1.8s infinite ease-in-out;
+  animation: load7 1.8s infinite ease-in-out;
+}
+.loader {
+  color: #14279B;
+  font-size: 5px;
+  /* margin: 80px auto; */
+  margin-left: 20px;
+  position: relative;
+  text-indent: -9999em;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation-delay: -0.16s;
+  animation-delay: -0.16s;
+  display:block;
+}
+.loader:before,
+.loader:after {
+  content: '';
+  position: absolute;
+  top: 0;
+}
+.loader:before {
+  left: -3.5em;
+  -webkit-animation-delay: -0.32s;
+  animation-delay: -0.32s;
+}
+.loader:after {
+  left: 3.5em;
+}
+@-webkit-keyframes load7 {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 2.5em 0 -1.3em;
+  }
+  40% {
+    box-shadow: 0 2.5em 0 0;
+  }
+}
+@keyframes load7 {
+  0%,
+  80%,
+  100% {
+    box-shadow: 0 2.5em 0 -1.3em;
+  }
+  40% {
+    box-shadow: 0 2.5em 0 0;
+  }
 }
