--- a/Main/src/websitestyle.css
+++ b/Main/src/websitestyle.css
@@ -9,7 +9,7 @@ html,body{
     /* display: grid; */
     height: 100%;
     /* place-items: center; */
-    background-color: #14279B;
+    background-color: #03061a;
     
 }
 
