--- a/Main/src/websitestyle.css
+++ b/Main/src/websitestyle.css
@@ -26,7 +26,7 @@ html,body{
     background: #f1f1f1;
 }
 ::-webkit-scrollbar-thumb{
-    background: #ddd;
+    background: #aebdf5;
 }
 ::-webkit-scrollbar-thumb:hover{
     background: #ccc;
