--- a/Main/src/chatbotstyle.css
+++ b/Main/src/chatbotstyle.css
@@ -16,6 +16,7 @@
     bottom: 4px;
     right: 6px;
     z-index: 6;
+    filter: drop-shadow(-5px -15px 10px rgba(0, 0, 0, 0.075));
 }
 .wrapper .title{
     padding-left: 20px;
@@ -58,8 +59,9 @@
     margin-left: 10px;
 }
 .form .inbox .msg-header p{
-    color: #fff;
-    background: #3D56B2;
+    color: #1d1d1d;
+    background: #efefef;
+    
     border-radius: 10px;
     padding: 8px 10px;
     font-size: 14px;
@@ -67,8 +69,8 @@
     
 }
 .form .user-inbox .msg-header p{
-    color: #333;
-    background: #efefef;
+    color: white;
+    background: #3D56B2;
 }
 .wrapper .typing-field{
     display: flex;
@@ -119,7 +121,7 @@
     opacity: 0;
     pointer-events: none;
     border-radius: 3px;
-    background: #3D56B2;
+    background: #14279B;
     border: 1px solid #3D56B2;
     transform: translateY(-50%);
     transition: all 0.3s ease;
@@ -199,11 +201,12 @@
 }
 
 
-.form .inbox .timestamp p{
+.form .inbox .timestamps p{
 
     padding-top: 10px;
     margin-left: 5px;
-    font-size: 10pt;
+    font-size: 7pt;
+    color: rgb(175, 175, 175);
     
 }
 
