--- a/Main/src/chatbotstyle.css
+++ b/Main/src/chatbotstyle.css
@@ -8,8 +8,10 @@
 .wrapper{
     width: 360px;
     background: #fff;
-    border-radius: 5px;
-    border: 1px solid lightgrey;
+    /* border-radius: 5px; */
+    /* border: 1px solid transparent; */
+    border: none;
+    height: fit-content;
     border-top: 0px;
 	display: none;
     position: fixed;
@@ -19,12 +21,12 @@
     filter: drop-shadow(-5px -15px 10px rgba(0, 0, 0, 0.075));
 }
 .wrapper .title{
-    padding-left: 20px;
+    /* padding-left: 2px; */
     background: #14279B;
     color: #fff;
     font-size: 18px;
     font-weight: 500;
-    line-height: 45px;
+    line-height: 52px;
     text-align: left;
     border-bottom: 1px solid #3D56B2;
     border-radius: 5px 5px 0 0;
@@ -55,13 +57,12 @@
     background: #3D56B2;
 }
 .wrapper .form .inbox .msg-header{
-    max-width: 53%;
+    max-width: 65%;
     margin-left: 10px;
 }
 .form .inbox .msg-header p{
     color: #1d1d1d;
-    background: #efefef;
-    
+    background: #f1f1f1;
     border-radius: 10px;
     padding: 8px 10px;
     font-size: 14px;
@@ -166,6 +167,17 @@
     color: #9b141f;
 }
 #location p:hover{
+    background-color:#5C7AEA;
+    color:white;
+    border-color: #14279B;
+}
+
+
+#query p{
+    border-color: #48149b;
+    color: #48149b;
+}
+#query p:hover{
     background-color:#5C7AEA;
     color:white;
     border-color: #14279B;
