--- a/Main/src/websitestyle.css
+++ b/Main/src/websitestyle.css
@@ -1,4 +1,87 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+
+/* OFFLINE FONTS */
+/* poppins-200 - latin-ext_latin_devanagari */
+@font-face {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 200;
+    src: url('../webfonts/poppins-v15-latin-ext_latin_devanagari-200.eot'); /* IE9 Compat Modes */
+    src: local(''),
+         url('../webfonts/poppins-v15-latin-ext_latin_devanagari-200.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../webfonts/poppins-v15-latin-ext_latin_devanagari-200.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../webfonts/poppins-v15-latin-ext_latin_devanagari-200.woff') format('woff'), /* Modern Browsers */
+         url('../webfonts/poppins-v15-latin-ext_latin_devanagari-200.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../webfonts/poppins-v15-latin-ext_latin_devanagari-200.svg#Poppins') format('svg'); /* Legacy iOS */
+  }
+  /* poppins-300 - latin-ext_latin_devanagari */
+  @font-face {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 300;
+    src: url('../webfonts/poppins-v15-latin-ext_latin_devanagari-300.eot'); /* IE9 Compat Modes */
+    src: local(''),
+         url('../webfonts/poppins-v15-latin-ext_latin_devanagari-300.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../webfonts/poppins-v15-latin-ext_latin_devanagari-300.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../webfonts/poppins-v15-latin-ext_latin_devanagari-300.woff') format('woff'), /* Modern Browsers */
+         url('../webfonts/poppins-v15-latin-ext_latin_devanagari-300.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../webfonts/poppins-v15-latin-ext_latin_devanagari-300.svg#Poppins') format('svg'); /* Legacy iOS */
+  }
+  /* poppins-regular - latin-ext_latin_devanagari */
+  @font-face {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../webfonts/poppins-v15-latin-ext_latin_devanagari-regular.eot'); /* IE9 Compat Modes */
+    src: local(''),
+         url('../webfonts/poppins-v15-latin-ext_latin_devanagari-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../webfonts/poppins-v15-latin-ext_latin_devanagari-regular.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../webfonts/poppins-v15-latin-ext_latin_devanagari-regular.woff') format('woff'), /* Modern Browsers */
+         url('../webfonts/poppins-v15-latin-ext_latin_devanagari-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../webfonts/poppins-v15-latin-ext_latin_devanagari-regular.svg#Poppins') format('svg'); /* Legacy iOS */
+  }
+  /* poppins-500 - latin-ext_latin_devanagari */
+  @font-face {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 500;
+    src: url('../webfonts/poppins-v15-latin-ext_latin_devanagari-500.eot'); /* IE9 Compat Modes */
+    src: local(''),
+         url('../webfonts/poppins-v15-latin-ext_latin_devanagari-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../webfonts/poppins-v15-latin-ext_latin_devanagari-500.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../webfonts/poppins-v15-latin-ext_latin_devanagari-500.woff') format('woff'), /* Modern Browsers */
+         url('../webfonts/poppins-v15-latin-ext_latin_devanagari-500.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../webfonts/poppins-v15-latin-ext_latin_devanagari-500.svg#Poppins') format('svg'); /* Legacy iOS */
+  }
+  /* poppins-600 - latin-ext_latin_devanagari */
+  @font-face {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 600;
+    src: url('../webfonts/poppins-v15-latin-ext_latin_devanagari-600.eot'); /* IE9 Compat Modes */
+    src: local(''),
+         url('../webfonts/poppins-v15-latin-ext_latin_devanagari-600.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../webfonts/poppins-v15-latin-ext_latin_devanagari-600.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../webfonts/poppins-v15-latin-ext_latin_devanagari-600.woff') format('woff'), /* Modern Browsers */
+         url('../webfonts/poppins-v15-latin-ext_latin_devanagari-600.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../webfonts/poppins-v15-latin-ext_latin_devanagari-600.svg#Poppins') format('svg'); /* Legacy iOS */
+  }
+  /* poppins-700 - latin-ext_latin_devanagari */
+  @font-face {
+    font-family: 'Poppins';
+    font-style: normal;
+    font-weight: 700;
+    src: url('../webfonts/poppins-v15-latin-ext_latin_devanagari-700.eot'); /* IE9 Compat Modes */
+    src: local(''),
+         url('../webfonts/poppins-v15-latin-ext_latin_devanagari-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+         url('../webfonts/poppins-v15-latin-ext_latin_devanagari-700.woff2') format('woff2'), /* Super Modern Browsers */
+         url('../webfonts/poppins-v15-latin-ext_latin_devanagari-700.woff') format('woff'), /* Modern Browsers */
+         url('../webfonts/poppins-v15-latin-ext_latin_devanagari-700.ttf') format('truetype'), /* Safari, Android, iOS */
+         url('../webfonts/poppins-v15-latin-ext_latin_devanagari-700.svg#Poppins') format('svg'); /* Legacy iOS */
+  }
+
+
+
+/* @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap'); */
 *{
     margin: 0;
     padding: 0;
